Fixed logo adjustment, added select instead of search and added select option for videos, returns to login page if auth/me status is 401, sidebar will collapse if device is mobile

--- a/src/index.css
+++ b/src/index.css
@@ -64,4 +64,7 @@ a {
   body {
     padding: 1rem;
   }
+  .ant-layout-sider-collapsed .ant-select {
+    display: none;
+  }
 }
